clang/test/BSC/Negative/Trait/r3/trait_assignment/trait_assignment.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

#include <stddef.h>

_Trait F<T> {};

_Trait F<float>* f() {
    _Trait F<float>* a = NULL;
    return a;
}

int main() {
   int m = 0;
   _Trait F<int>* b = f();  // expected-error {{expected a pointer type which has implemented '_Trait F<int>', found '_Trait F<float> *'}}
   return 0;
}